--- a/.github/workflows/fullstack-frontend.yml
+++ b/.github/workflows/fullstack-frontend.yml
@@ -1,27 +1,24 @@
-name: Frontend Portfolio React
+name: FullStack Frontend React
 on:
    push:
     branches:
       - main
       - deployment
     paths:
-      - 'Portfolio/frontend-portfolio/**'
-      - '.github/workflows/frontend-portfolio*'
+      - 'Full-Stack/frontend/**'
+      - '.github/workflows/fullstack-frontend*'
    pull_request:
-      types: [opened, reopened,synchronize]
-
+    types: [opened, reopened,synchronize]
 permissions:
     id-token: write
     contents: read
-
 jobs:
-  
-  frontend-portfolio:
+  fullstack-frontend:
      runs-on: ubuntu-latest
      timeout-minutes: 10
      defaults:
       run:
-        working-directory: Portfolio/frontend-portfolio
+        working-directory: Full-Stack/frontend/
 
      steps:
      - name: Checkout the code repo
@@ -43,10 +40,10 @@ jobs:
        uses: docker/build-push-action@v6
        with:
           push: true
-          context: Portfolio/frontend-portfolio/
+          context: Full-Stack/frontend/
           tags: |
-            ghcr.io/somnath-more/frontend-portfolio:latest
-            ghcr.io/somnath-more/frontend-portfolio:${{ github.sha}}
+            ghcr.io/somnath-more/fullstack-frontend-todo:latest
+            ghcr.io/somnath-more/fullstack-frontend-todo:${{ github.sha}}
 
     #  - name: Set up AWS CLI
     #    uses: aws-actions/configure-aws-credentials@v1
@@ -66,9 +63,9 @@ jobs:
            chmod 400 key.pem
            ssh -o StrictHostKeyChecking=no -i key.pem $EC2_HOST@$EC2_USER << EOF
            docker login ghcr.io -u ${{ github.actor }} -p $PAT_TOKEN
-           docker pull ghcr.io/somnath-more/frontend-portfolio:${{ github.sha }}
-           docker stop frontend-portfolio || true
-           docker rm frontend-portfolio || true
-           docker run -itd -p 8080:80 --name=frontend-portfolio ghcr.io/somnath-more/frontend-portfolio:${{ github.sha }}
+           docker pull ghcr.io/somnath-more/fullstack-frontend-todo:${{ github.sha }}
+           docker stop fullstack-frontend-todo || true
+           docker rm fullstack-frontend-todo || true
+           docker run -itd -p 9090:80 --name=fullstack-frontend-todo ghcr.io/somnath-more/fullstack-frontend-todo:${{ github.sha }}
            echo "Deployed on EC2 successfully!"
            EOF
