--- a/Full-Stack/backend/demo/pom.xml
+++ b/Full-Stack/backend/demo/pom.xml
@@ -59,6 +59,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>3.3.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
