--- a/.github/workflows/nodejs-portfolio.yml
+++ b/.github/workflows/nodejs-portfolio.yml
@@ -1,74 +1,70 @@
 name: Nodejs Portfolio React
+
 on:
-   push:
+  push:
     branches:
       - main
       - deployment
     paths:
       - 'Nodejs/FreelanceProject-MERNB/**'
       - '.github/workflows/nodejs-portfolio*'
-   pull_request:
-      types: [opened, reopened,synchronize]
+  pull_request:
+    types: [opened, reopened, synchronize]
 
 permissions:
-    id-token: write
-    contents: read
+  id-token: write
+  contents: read
 
 jobs:
-  
   nodejs-portfolio:
-     runs-on: ubuntu-latest
-     timeout-minutes: 10
-     defaults:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    defaults:
       run:
         working-directory: Nodejs/FreelanceProject-MERNB
 
-     steps:
-     - name: Checkout the code repo
-       uses: actions/checkout@v2
+    steps:
+      - name: Checkout the code repo
+        uses: actions/checkout@v2
 
-     - name: Install dependencies
-       run: npm install 
+      - name: Install dependencies
+        run: npm install
 
-     - name: Build the app
-       run: npm  run build
+      # Skip build if unnecessary
+      # If you're not using React or bundling, skip the build
+      # - name: Build the app
+      #   run: npm run build
 
-     - name: Login to GHCR Registry
-       uses: docker/login-action@v1
-       with:
-         registry: ghcr.io
-         username: ${{ github.repository_owner }}
-         password: ${{ secrets.PAT_TOKEN }}
-     - name: Build and push
-       uses: docker/build-push-action@v6
-       with:
+      - name: Login to GHCR Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.PAT_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
           push: true
-          context: Nodejs/FreelanceProject-MERNB
+          context: .
           tags: |
             ghcr.io/somnath-more/nodejs-portfolio:latest
-            ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha}}
+            ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
 
-    #  - name: Set up AWS CLI
-    #    uses: aws-actions/configure-aws-credentials@v1
-    #    with:
-    #           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    #           aws-secret-access-key: ${{ secrets.AWS_ACCESS_KEY }}
-    #           aws-region: us-east-2 
-  
-     - name: Deploy on EC2
-       env:
-        EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_KEY: ${{ secrets.EC2_KEY }}
-        PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-       run: |
-           echo "$EC2_KEY" > key.pem
-           chmod 400 key.pem
-           ssh -o StrictHostKeyChecking=no -i key.pem $EC2_HOST@$EC2_USER << EOF
-           docker login ghcr.io -u ${{ github.actor }} -p $PAT_TOKEN
-           docker pull ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
-           docker stop nodejs-portfolio || true
-           docker rm nodejs-portfolio || true
-           docker run -itd -p 8080:80 --name=nodejs-portfolio ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
-           echo "Deployed on EC2 successfully!"
-           EOF
+      - name: Deploy on EC2
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+          EC2_KEY: ${{ secrets.EC2_KEY }}
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          echo "$EC2_KEY" > key.pem
+          chmod 400 key.pem
+          ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
+          docker login ghcr.io -u ${{ github.actor }} -p $PAT_TOKEN
+          docker pull ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
+          docker stop nodejs-portfolio || true
+          docker rm nodejs-portfolio || true
+          docker run -itd -p 3000:80 --name=nodejs-portfolio ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
+          echo "Deployed on EC2 successfully!"
+          EOF
