--- a/.github/workflows/nodejs-portfolio.yml
+++ b/.github/workflows/nodejs-portfolio.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           echo "$EC2_KEY" > key.pem
           chmod 400 key.pem
-          ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
+          ssh -o StrictHostKeyChecking=no -i key.pem $EC2_HOST@$EC2_USER << EOF
           docker login ghcr.io -u ${{ github.actor }} -p $PAT_TOKEN
           docker pull ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
           docker stop nodejs-portfolio || true
