--- a/.github/workflows/nodejs-portfolio.yml
+++ b/.github/workflows/nodejs-portfolio.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
       - name: Checkout the code repo
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Install dependencies
         run: npm install
@@ -56,6 +58,7 @@ jobs:
           echo "$EC2_KEY" > key.pem
           chmod 400 key.pem
           ssh -o StrictHostKeyChecking=no -i key.pem $EC2_HOST@$EC2_USER << EOF
+          git checkout deployment
           docker login ghcr.io -u ${{ github.actor }} -p $PAT_TOKEN
           docker pull ghcr.io/somnath-more/nodejs-portfolio:latest
           cd somnath-learning/Nodejs/FreelanceProject-MERNB/
