--- a/Portfolio/frontend-portfolio/Dockerfile
+++ b/Portfolio/frontend-portfolio/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:alpine
 COPY nginx.conf ./etc/nginx/conf.d/default.conf
-RUN rm -rf /usr/share/nginx/html/*
+RUN rm -rf /usr/share/nginx/html/*sv
 COPY build /usr/share/nginx/html/
 EXPOSE 80
 CMD [ "nginx","-g","daemon off;" ]
