--- a/Portfolio/frontend-portfolio/package.json
+++ b/Portfolio/frontend-portfolio/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-typed": "^2.0.12",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
