--- a/.github/workflows/nodejs-portfolio.yml
+++ b/.github/workflows/nodejs-portfolio.yml
@@ -1,13 +1,10 @@
-name: Nodejs Portfolio React
+name: Node.js Portfolio CI/CD
 
 on:
   push:
     branches:
       - main
       - deployment
-    paths:
-      - 'Nodejs/FreelanceProject-MERNB/**'
-      - '.github/workflows/nodejs-portfolio*'
   pull_request:
     types: [opened, reopened, synchronize]
 
@@ -24,26 +21,25 @@ jobs:
         working-directory: Nodejs/FreelanceProject-MERNB
 
     steps:
-      - name: Checkout the code repo
+      - name: Checkout the code repository
         uses: actions/checkout@v2
 
       - name: Install dependencies
         run: npm install
 
-      # Skip build if unnecessary
-      # If you're not using React or bundling, skip the build
+      # Uncomment this step if your application needs to be built
       # - name: Build the app
       #   run: npm run build
 
-      - name: Login to GHCR Registry
-        uses: docker/login-action@v1
+      - name: Login to GitHub Container Registry (GHCR)
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.PAT_TOKEN }}
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v6
+      - name: Build and push Docker image to GHCR
+        uses: docker/build-push-action@v4
         with:
           push: true
           context: Nodejs/FreelanceProject-MERNB/
@@ -51,7 +47,7 @@ jobs:
             ghcr.io/somnath-more/nodejs-portfolio:latest
             ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
 
-      - name: Deploy on EC2
+      - name: Deploy on EC2 and Run Docker Compose
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
@@ -60,11 +56,22 @@ jobs:
         run: |
           echo "$EC2_KEY" > key.pem
           chmod 400 key.pem
-          ssh -o StrictHostKeyChecking=no -i key.pem $EC2_HOST@$EC2_USER << EOF
-          docker login ghcr.io -u ${{ github.actor }} -p $PAT_TOKEN
-          docker pull ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
-          docker stop nodejs-portfolio || true
-          docker rm nodejs-portfolio || true
-          docker run -itd -p 5555:5555 --name=nodejs-portfolio ghcr.io/somnath-more/nodejs-portfolio:${{ github.sha }}
-          echo "Deployed on EC2 successfully!"
+          ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
+            # Login to GitHub Container Registry on EC2
+            docker login ghcr.io -u ${{ github.actor }} -p $PAT_TOKEN
+            # remove existing latest image
+            docker rm ghcr.io/somnath-more/nodejs-portfolio:latest
+            # Pull the latest Docker images if needed
+            docker pull ghcr.io/somnath-more/nodejs-portfolio:latest
+
+            # Change to the directory where docker-compose.yml is located
+            pwd
+
+            # Stop and remove existing containers (if any)
+            docker-compose down || true
+
+            # Start the application using docker-compose up
+            docker-compose up -d
+
+            echo "Deployment completed successfully on EC2!"
           EOF
