--- a/Nodejs/FreelanceProject-MERNB/docker-compose.yml
+++ b/Nodejs/FreelanceProject-MERNB/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     networks:
       - node-network
 
-# Persist data across container restarts
+# Persist data across container restarts doing something to check cicd 
 volumes:
   mongodb_data:
     driver: local
