--- a/Portfolio/frontend-portfolio/package.json
+++ b/Portfolio/frontend-portfolio/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
