--- a/Portfolio/frontend-portfolio/package.json
+++ b/Portfolio/frontend-portfolio/package.json
@@ -18,12 +18,16 @@
     "emailjs-com": "^3.2.0",
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.30.2",
     "react-typed": "^2.0.12",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
+    "swiper": "^11.1.14",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -50,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
