--- a/Portfolio/frontend-portfolio/package.json
+++ b/Portfolio/frontend-portfolio/package.json
@@ -19,6 +19,7 @@
     "flowbite-react": "^0.10.2",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router": "^6.26.0",
     "react-router-dom": "^6.26.0",
