--- a/react-daily/package.json
+++ b/react-daily/package.json
@@ -11,10 +11,14 @@
     "mock-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "axios": "^1.7.7",
+    "babel-loader": "^10.0.0",
     "bootstrap": "^5.3.3",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
